--- a/index.html
+++ b/index.html
@@ -10,46 +10,46 @@
         <main>
         <ul>
             <li><picture>
-              <source srcset="img/1-large.png" media="(min-width:1500px)" />
-              <source srcset="img/1-med.png" media="(min-width: 700px) and (max-width: 1500px)" />
-              <source srcset="img/1-s.png" media="(max-width:700px)" />
-              <img src="img/1-med.png" alt="the medium image is our default" />
+              <source srcset="img/1-large.jpg" media="(min-width:1200px)" />
+              <source srcset="img/1-med.jpg" media="(min-width: 700px) and (max-width: 1200px)" />
+              <source srcset="img/1-s.jpg" media="(max-width:700px)" />
+              <img src="img/1-med.jpg" alt="the medium image is our default" />
             </picture></li>
             <li><picture>
-              <source srcset="img/2-large.png" media="(min-width:1500px)" />
-              <source srcset="img/2-med.png" media="(min-width: 700px) and (max-width: 1500px)" />
-              <source srcset="img/2-s.png" media="(max-width:700px)" />
-              <img src="img/2-med.png" alt="the medium image is our default" />
+              <source srcset="img/2-large.jpg" media="(min-width:1200px)" />
+              <source srcset="img/2-med.jpg" media="(min-width: 700px) and (max-width: 1200px)" />
+              <source srcset="img/2-s.jpg" media="(max-width:700px)" />
+              <img src="img/2-med.jpg" alt="the medium image is our default" />
             </picture></li>
             <li><picture>
-              <source srcset="img/3-large.png" media="(min-width:1500px)" />
-              <source srcset="img/3-med.png" media="(min-width: 700px) and (max-width: 1500px)" />
-              <source srcset="img/3-s.png" media="(max-width:700px)" />
-              <img src="img/3-med.png" alt="the medium image is our default" />
+              <source srcset="img/3-large.jpg" media="(min-width:1200px)" />
+              <source srcset="img/3-med.jpg" media="(min-width: 700px) and (max-width: 1200px)" />
+              <source srcset="img/3-s.jpg" media="(max-width:700px)" />
+              <img src="img/3-med.jpg" alt="the medium image is our default" />
             </picture></li>
             <li><picture>
-              <source srcset="img/4-large.png" media="(min-width:1500px)" />
-              <source srcset="img/4-med.png" media="(min-width: 700px) and (max-width: 1500px)" />
-              <source srcset="img/4-s.png" media="(max-width:700px)" />
-              <img src="img/4-med.png" alt="the medium image is our default" />
+              <source srcset="img/4-large.jpg" media="(min-width:1200px)" />
+              <source srcset="img/4-med.jpg" media="(min-width: 700px) and (max-width: 1200px)" />
+              <source srcset="img/4-s.jpg" media="(max-width:700px)" />
+              <img src="img/4-med.jpg" alt="the medium image is our default" />
             </picture></li>
             <li><picture>
-              <source srcset="img/5-large.png" media="(min-width:1500px)" />
-              <source srcset="img/5-med.png" media="(min-width: 700px) and (max-width: 1500px)" />
-              <source srcset="img/5-s.png" media="(max-width:700px)" />
-              <img src="img/5-med.png" alt="the medium image is our default" />
+              <source srcset="img/5-large.jpg" media="(min-width:1200px)" />
+              <source srcset="img/5-med.jpg" media="(min-width: 700px) and (max-width: 1200px)" />
+              <source srcset="img/5-s.jpg" media="(max-width:700px)" />
+              <img src="img/5-med.jpg" alt="the medium image is our default" />
             </picture></li>
             <li><picture>
-              <source srcset="img/6-large.png" media="(min-width:1500px)" />
-              <source srcset="img/6-med.png" media="(min-width: 700px) and (max-width: 1500px)" />
-              <source srcset="img/6-s.png" media="(max-width:700px)" />
-              <img src="img/6-med.png" alt="the medium image is our default" />
+              <source srcset="img/6-large.jpg" media="(min-width:1200px)" />
+              <source srcset="img/6-med.jpg" media="(min-width: 700px) and (max-width: 1200px)" />
+              <source srcset="img/6-s.jpg" media="(max-width:700px)" />
+              <img src="img/6-med.jpg" alt="the medium image is our default" />
             </picture></li>
             <li><picture>
-              <source srcset="img/7-large.png" media="(min-width:1500px)" />
-              <source srcset="img/7-med.png" media="(min-width: 700px) and (max-width: 1500px)" />
-              <source srcset="img/7-s.png" media="(max-width:700px)" />
-              <img src="img/7-med.png" alt="the medium image is our default" />
+              <source srcset="img/7-large.jpg" media="(min-width:1200px)" />
+              <source srcset="img/7-med.jpg" media="(min-width: 700px) and (max-width: 1200px)" />
+              <source srcset="img/7-s.jpg" media="(max-width:700px)" />
+              <img src="img/7-med.jpg" alt="the medium image is our default" />
             </picture></li>
         </ul>
         </main>
